--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="theme-color" content="#4a76a8">
     <link rel="icon" href="https://vk.com/favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Приложение для архива данных VK</title>
   </head>
   <body>
     <noscript>
