--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="theme-color" content="#4a76a8">
     <link rel="icon" href="https://vk.com/favicon.ico">
-    <title>Приложение для архива данных VK</title>
+    <title>Просмотрщик сообщений для архива данных VK</title>
   </head>
   <body>
     <noscript>
